--- a/index.html
+++ b/index.html
@@ -338,8 +338,18 @@
 						rebuiLT is a student-initiated MAKE project that aims to experiment and promote sustainable construction and the implementation of healthier and more frugal lifestyles. Based on the dynamics of the Low Tech Lab Lausanne, this project is taking shape with the construction of a community pavilion in Ecublens, enabling the implementation of construction solutions using reused or bio-sourced materials, low-tech technologies in an urban environment and a participatory construction approach with future users. Students work together to acquire both technical and human skills in a shared-governance organization.
 					</div>
 				</div>
-				<!-- Resource 24: Low Tech Lab -->
+				<!-- Resource 24: SaiLowTech -->
 				<div class="bubble smaller" id="resource24">
+					<a href="https://sailowtech.ch/en/home-page/">
+						<img src="logo\sailowtech.png" alt="SaiLowTech">
+					</a>
+					<div class="text-description">
+						<h3>SaiLowTech</h3>
+						“Raising the voice of the Ocean”. This is the mission that the Sailowtech association has set itself! Sailowtech believes in the power of scientific discovery and the transmission of values for the preservation of the oceans and its inhabitants. Concretely, Sailowtech offers sailing as support for low-tech and frugal scientific initiatives and makes scientific research accessible to raise awareness, in order to provide the widest audience with tools for understanding climate issues, without judgment and in respect of the economic and social constraints of each environment.
+					</div>
+				</div>
+				<!-- Resource 25: Low Tech Lab -->
+				<div class="bubble smaller" id="resource25">
 					<a href="https://lowtechlab.unipoly.ch/">
 						<img src="logo\low_tech_lab.png" alt="Low Tech Lab">
 					</a>
@@ -348,8 +358,8 @@
 						What if we imagined more sustainable and locally-based technologies? We could choose to use simpler technologies that don't circumnavigate the planet several times before reaching us. This is the vision of technology advocated by the low-tech movement, as opposed to high-tech. These technologies adhere to three key principles in their design: usefulness, accessibility, and sustainability. The Low-tech Lab Lausanne aims to develop the low-tech approach within the EPFL campus and in the Lausanne region, as well as to support projects that embody a technically sustainable and desirable society.
 					</div>
 				</div>
-				<!-- Resource 25: Skil -->
-				<div class="bubble smaller" id="resource25">
+				<!-- Resource 26: Skil -->
+				<div class="bubble smaller" id="resource26">
 					<a href="https://www.epfl.ch/labs/skil/en/about/">
 						<img src="logo\SKIL_logo.png" alt="Skil">
 					</a>
@@ -364,8 +374,8 @@
 				<img src="logo\Services.png" alt="Image">
 				<span>Enjoy services</span>
 				<div class="border" id="border5"></div>
-				<!-- Resource 26: Slow ta carrière -->
-				<div class="bubble smaller" id="resource26">
+				<!-- Resource 27: Slow ta carrière -->
+				<div class="bubble smaller" id="resource27">
 					<a href="https://www.le-bon-sens.ch/slowtacarriere">
 						<img src="logo\slow_ta_carriere.png" alt="Slow ta carrière">
 					</a>
@@ -374,8 +384,8 @@
 						The “SLOW TA CARRIERE” professional orientation workshops offer a space for reflection and the development of eco-projects for people wishing to “green” their professional life, by proposing an approach where ecological limits and social responsibility are considered as criteria for career choice, in the same way as the professional interests or the personality of the participants.
 					</div>
 				</div>
-				<!-- Resource 27: association débouchés durables -->
-				<div class="bubble smaller" id="resource27">
+				<!-- Resource 28: association débouchés durables -->
+				<div class="bubble smaller" id="resource28">
 					<a href="https://unipoly.ch/debouches-durables/">
 						<img src="logo\débouchés durables.png" alt="association débouchés durables">
 					</a>
@@ -384,8 +394,8 @@
 						Débouchés Durables is a center of Unipoly which seeks to make issues concerning sustainability visible in the future experiences (professional, associative, etc.) of students. This involves the proposal of articles on the concept of "sustainable outlets", conferences/events in order to feed the reflection on the matter, a database of companies selected in accordance with a charter of values, and a permanent service to listen to students' questions...
 					</div>
 				</div>
-				<!-- Resource 28: Thrift store UPFashionLab -->
-				<div class="bubble smaller" id="resource28">
+				<!-- Resource 29: Thrift store UPFashionLab -->
+				<div class="bubble smaller" id="resource29">
 					<a href="https://www.facebook.com/upfashionlab/">
 						<img src="logo\UPFL_logo.png" alt="Thrift store UPFashionLab">
 					</a>
@@ -394,8 +404,8 @@
 						UpFashionLab is Lausanne's first association dedicated to raising awareness around the fashion industry. The aim is to promote fashion that is shared, recycled and sustainable on campus.
 					</div>
 				</div>
-				<!-- Resource 29: Bibliothèque d’objets -->
-				<div class="bubble smaller" id="resource29">
+				<!-- Resource 30: Bibliothèque d’objets -->
+				<div class="bubble smaller" id="resource30">
 					<a href="https://www.unil.ch/durable/fr/home/menuinst/campus-durable/projets-estudiantins/biblotheque-dobjets.html">
 						<img src="logo\biblio-d-objets.png" alt="Bibliothèque d’objets">
 					</a>
@@ -404,8 +414,8 @@
 						Some of your objects take up space? Don't use them anymore? Are they in good condition? Want to save some space? The library is here! Your objects will have the opportunity to be used and will delight students. It is also possible to lend the objects for a certain time and take them back afterwards. On Wednesday evening from 17pm, the House of Sustainability is open for the loan and reception of objects.
 					</div>
 				</div>
-				<!-- Resource 30: Meubléco -->
-				<div class="bubble smaller" id="resource30">
+				<!-- Resource 31: Meubléco -->
+				<div class="bubble smaller" id="resource31">
 					<a href="https://meubleco.unipoly.ch/">
 						<img src="logo\meubleco.png" alt="Meubléco">
 					</a>
@@ -414,8 +424,8 @@
 						Meubléco is a project run by the Unipoly association, aiming to promote eco-friendly practices and sustainability at the Unil-EPFL campus. It started in the fall of 2020 with a simple goal: encouraging the reuse of furniture. Meubléco allows students to buy and sell second-hand furniture at budget-friendly prices, making sustainable choices accessible to the Unil-EPFL community.
 					</div>
 				</div>
-				<!-- Resource 31: Fix n’Replace -->
-				<div class="bubble smaller" id="resource31">
+				<!-- Resource 32: Fix n’Replace -->
+				<div class="bubble smaller" id="resource32">
 					<a href="https://unipoly.ch/fix_n_replace-english/">
 						<img src="logo\fix n replace logo.png" alt="Fix n’Replace">
 					</a>
@@ -424,8 +434,8 @@
 						Fix N’Replace organizes a series of "Repair Café" events on the UNIL/EPFL campuses. The organization's goal is to combat waste by extending the lifespan of various objects. They aim to promote reuse by providing easy access to repair services and teaching the fundamentals of repair🐣.
 					</div>
 				</div>
-				<!-- Resource 32: Point vélo -->
-				<div class="bubble smaller" id="resource32">
+				<!-- Resource 33: Point vélo -->
+				<div class="bubble smaller" id="resource33">
 					<a href="https://www.epfl.ch/campus/mobility/mobility-and-travel/commuting/point-velo/">
 						<img src="logo\point velo title.png" alt="Point vélo">
 					</a>
@@ -434,8 +444,8 @@
 						Point Vélo is a place where EPFL community members can buy new and used bikes and cycling gear at reduced prices, get affordable bike repairs, and attend free bike mechanics classes. These products and services are available only to EPFL community members. You will be asked to present your Campiro card.
 					</div>
 				</div>
-				<!-- Resource 33: Point Smart -->
-				<div class="bubble smaller" id="resource33">
+				<!-- Resource 34: Point Smart -->
+				<div class="bubble smaller" id="resource34">
 					<a href="https://www.epfl.ch/about/sustainability/sustainable-it/point-smart/">
 						<img src="logo\point smart title.png" alt="Point Smart">
 					</a>
@@ -450,8 +460,8 @@
 				<img src="logo\Community.png" alt="Image">
 				<span>Take Action</span>
 				<div class="border" id="border6"></div>
-				<!-- Resource 34: Unipoly -->
-				<div class="bubble smaller" id="resource34">
+				<!-- Resource 35: Unipoly -->
+				<div class="bubble smaller" id="resource35">
 					<a href="https://unipoly.ch/">
 						<img src="logo\Unipoly_logo.png" alt="Unipoly">
 					</a>
@@ -460,8 +470,8 @@
 						Unipoly aims to mobilize and initiate discussion on societal topics related to ecology among UNIL and EPFL students. To do this, the association is committed to the various authorities of these schools and it organizes film screenings, conferences, debates and many other projects, through its various poles.
 					</div>
 				</div>
-				<!-- Resource 35: Polyquity -->
-				<div class="bubble smaller" id="resource35">
+				<!-- Resource 36: Polyquity -->
+				<div class="bubble smaller" id="resource36">
 					<a href="https://polyquity.ch/">
 						<img src="logo\polyquity_new.png" alt="Polyquity">
 					</a>
@@ -470,8 +480,8 @@
 						Polyquity is a commission of AGEPoly, the student association of EPFL. Its main objectives are to provide open discussions on issues of discrimination and to raise awareness on campus about existing discriminations and ways to combat them. To achieve this, it organizes coffee discussions, workshops, and is responsible for the Instagram account "payetonepfl," which exposes and highlights discriminatory situations experienced on the EPFL campus, as well as numerous other projects to make everyday life at EPFL sustainable and inclusive for everyone.
 					</div>
 				</div>
-				<!-- Resource 36: Queermanence -->
-				<div class="bubble smaller" id="resource36">
+				<!-- Resource 37: Queermanence -->
+				<div class="bubble smaller" id="resource37">
 					<a href="https://www.instagram.com/p/CkHJo0yj14L/">
 						<img src="logo\logo queermanence.png" alt="Queermanence">
 					</a>
@@ -480,8 +490,8 @@
 						Queermanence aims to be a caring and confidential listening space. This place exists to give an initial warm support but also to help to find a staff (health, social or legal) trained and adapted to your needs. Queermanence's objective is to offer support during challenging times, such as instances of physical or verbal violence, harassment, and gender discrimination, while also providing guidance on gender, sexual, and intimate questions.
 					</div>
 				</div>
-				<!-- Resource 37: Zero Emission Group -->
-				<div class="bubble smaller" id="resource37">
+				<!-- Resource 38: Zero Emission Group -->
+				<div class="bubble smaller" id="resource38">
 					<a href="https://zeroemission.group/">
 						<img src="logo\zero_emission_group.png" alt="Zero Emission Group">
 					</a>
@@ -490,8 +500,8 @@
 						Zero Emission Group is a student led initiative aimed at raising awareness and working with stakeholders on and beyond the EPFL campus in order to catalyze sustainable action. 🌍
 					</div>
 				</div>
-				<!-- Resource 38: Ingénieur·e·s du monde -->
-				<div class="bubble smaller" id="resource38">
+				<!-- Resource 39: Ingénieur·e·s du monde -->
+				<div class="bubble smaller" id="resource39">
 					<a href="https://www.epfl.ch/campus/associations/list/idm/">
 						<img src="logo\Ingénieur_e_s_du_monde 2.png" alt="Ingénieur·e·s du monde">
 					</a>
@@ -500,8 +510,8 @@
 						Ingénieur·e·s du Monde (Engineers of the World) is a student association of EPFL-UNIL. Its objective is to make students aware of being responsible engineers for a fair and sustainable world. This involves informing students about the inequalities in the world, the environmental and ethical problems that exist, and sometimes trying to bring ideas for solutions by collaborating with partners around the world. the association also proposes internships in social sustainability for EPFL and UNIL students.
 					</div>
 				</div>
-				<!-- Resource 39: Ingénieur·e·s Engagé.es -->
-				<div class="bubble smaller" id="resource39">
+				<!-- Resource 40: Ingénieur·e·s Engagé.es -->
+				<div class="bubble smaller" id="resource40">
 					<a href="https://ingenieurs-engages.org/">
 						<img src="logo\ie_lausanne.png" alt="Ingénieur·e·s Engagé.es">
 					</a>
@@ -510,8 +520,8 @@
 						The Ingénieurs Engagés (IE) movement aims to bring together all those who question the role and place of engineers in society. It mainly gathers students and engineers who want to give meaning to their (future) profession, aware of the social and environmental issues that our society must face today.
 					</div>
 				</div>
-				<!-- Resource 40: La Convergence -->
-				<div class="bubble smaller" id="resource40">
+				<!-- Resource 41: La Convergence -->
+				<div class="bubble smaller" id="resource41">
 					<a href="https://laconvergence.ch/">
 						<img src="logo\la convergence.png" alt="La Convergence">
 					</a>
@@ -520,8 +530,8 @@
 						Behind the aegis of La Convergence are jointly united the associations: Ingénieur·e·s du Monde, Poliquity, Zero Emission Group, Unipoly, and Planqueer. Their grouping gives them strength for action and the ability to organize more ambitious scale actions thanks to the combination of their experiences, their specializations and the grouping of their members.
 					</div>
 				</div>
-				<!-- Resource 41: Amnesty des Hautes Ecoles Lausannoises -->
-				<div class="bubble smaller" id="resource41">
+				<!-- Resource 42: Amnesty des Hautes Ecoles Lausannoises -->
+				<div class="bubble smaller" id="resource42">
 					<a href="https://www.unil.ch/associations/causes-sociales">
 						<img src="logo\amnesty_logo.png" alt="Amnesty des Hautes Ecoles Lausannoises">
 					</a>
@@ -530,8 +540,8 @@
 						The association Amnesty HEL is dedicated to promoting the defense of human rights on Lausanne campuses by raising student awareness of socio-political and environmental issues. Its activities and actions are organized into five sections: Women's Rights, Environment, International Political News, LGBTQ+, and Asylum and Migration. Within these sections, a wide range of events and actions take place, including conferences, film screenings, workshops, and concrete initiatives. These concrete actions involve fighting against menstrual precariousness on campus, organizing sustainability rallies, setting up a podcast, and conducting waste collections. All of these activities are carried out in a caring and inclusive manner.
 					</div>
 				</div>
-				<!-- Resource 42: Apiculture -->
-				<div class="bubble smaller" id="resource42">
+				<!-- Resource 43: Apiculture -->
+				<div class="bubble smaller" id="resource43">
 					<a href="https://unipoly.ch/apiculture-english/">
 						<img src="logo\apiculture.png" alt="Apiculture">
 					</a>
@@ -540,8 +550,8 @@
 						The goal of the Apiculture project is to raise awareness among students and staff on campus about the issue of bee colony collapse disorder and to become familiar with beekeeping. To do this, the project has its own apiary composed of about 5 hives located on the Bassenges farm estate since early 2017 allowing us to learn about beekeeping and produce honey when the bees have decided to do so.
 					</div>
 				</div>
-				<!-- Resource 43: Jardins - Campus farmers -->
-				<div class="bubble smaller" id="resource43">
+				<!-- Resource 44: Jardins - Campus farmers -->
+				<div class="bubble smaller" id="resource44">
 					<a href="https://unipoly.ch/jardins-campus-farmers/">
 						<img src="logo\jardin_campus_farmers2.png" alt="Jardins - Campus farmers">
 					</a>
@@ -550,8 +560,8 @@
 						This project aims to allow students to grow vegetables on their campus in an organic way. Of course it is a learning ground for gardening, but it is also a place where one (re)discovers a relationship with the earth and nature as well as a place for exchange with other students.
 					</div>
 				</div>
-				<!-- Resource 44: Association des étudiant·es végan·es et animalistes -->
-				<div class="bubble smaller" id="resource44">
+				<!-- Resource 45: Association des étudiant·es végan·es et animalistes -->
+				<div class="bubble smaller" id="resource45">
 					<a href="https://unipoly.ch/eva/">
 						<img src="logo\EVA.png" alt="Association des étudiant·es végan·es et animalistes">
 					</a>
@@ -560,8 +570,8 @@
 						EVA is Unipoly's hub representing vegan students and animal rights supporters. It encourages an ethical and animal-friendly lifestyle, and offers the possibility to feed and live as independently as possible from animal exploitation by significantly increasing the vegan offer in the catering places of university campuses. The EVA also wishes to bring together vegan students and people interested in veganism and animalism in a community focused on discussion and offer support and advice to students and collaborators wishing to adopt a vegan lifestyle.
 					</div>
 				</div>
-				<!-- Resource 45: Drag Lab -->
-				<div class="bubble smaller" id="resource45">
+				<!-- Resource 46: Drag Lab -->
+				<div class="bubble smaller" id="resource46">
 					<a href="https://www.epfl.ch/campus/associations/list/asar/drag-lab/">
 						<img src="logo\drag_lab.png" alt="Drag Lab">
 					</a>
@@ -570,8 +580,8 @@
 						People studying, teaching or working at EPFL promoting parity and diversity in the architecture school through readings and discussions.
 					</div>
 				</div>
-				<!-- Resource 46: PlanQueer -->
-				<div class="bubble smaller" id="resource46">
+				<!-- Resource 47: PlanQueer -->
+				<div class="bubble smaller" id="resource47">
 					<a href="https://www.epfl.ch/campus/associations/list/planqueer/">
 						<img src="logo\planqueer.png" alt="PlanQueer">
 					</a>
