--- a/index_fr.html
+++ b/index_fr.html
@@ -331,8 +331,18 @@
 						rebuiLT est un projet MAKE d’initiative étudiante qui a pour but d'expérimenter et promouvoir la construction durable et la mise en pratique de modes de vie plus sains et sobres. Basé sur une dynamique du Low Tech Lab Lausanne, ce projet se concrétise avec la construction d'un pavillon communautaire à Ecublens qui permet de mettre en place des solutions de construction avec des matériaux de réemplois ou biosourcés, des technologies low-tech en milieu urbain et une démarche de construction participative avec les futur.e.s utilisateur.ice.s. Les étudiant.e.s collaborent pour acquérir des compétences tant techniques qu’humaines dans une organisation en gouvernance partagée.
 					</div>
 				</div>
-				<!-- Resource 24: Low Tech Lab -->
+				<!-- Resource 24: SaiLowTech -->
 				<div class="bubble smaller" id="resource24">
+					<a href="https://sailowtech.ch/en/home-page/">
+						<img src="logo\sailowtech.png" alt="SaiLowTech">
+					</a>
+					<div class="text-description">
+						<h3>SaiLowTech</h3>
+						« Faire résonner la voix de l’Océan », Voici la mission que s’est fixée l’association Sailowtech ! Elle croit au pouvoir du lien entre la découverte, l’innovation et l’esprit d’aventure pour la préservation de notre bien le plus précieux : l’Océan. Concrètement, Sailowtech propose la navigation à la voile comme soutien d’initiatives scientifiques frugales et rend accessible la recherche scientifique pour éveiller les consciences. Elle souhaite apporter au plus grand nombre les outils de compréhension des enjeux climatiques, sans jugement et dans le respect des contraintes économiques et sociales de chaque milieu.
+					</div>
+				</div>
+				<!-- Resource 25: Low Tech Lab -->
+				<div class="bubble smaller" id="resource25">
 					<a href="https://lowtechlab.unipoly.ch/">
 						<img src="logo\low_tech_lab.png" alt="Low Tech Lab">
 					</a>
@@ -341,8 +351,8 @@
 						Et si on imaginait des technologies plus sobres et plus locales ? On pourrait décider d’utiliser des technologies plus simples, qui ne font pas plusieurs fois le tour de la planète avant d’arriver chez nous. C’est la vision de la technologie défendue par le mouvement des low-techs, ou basses technologies, par opposition aux high-techs. Ces technologies répondent à trois grands principes dans leur conception : utiles, accessibles, durables. Le Low-tech Lab Lausanne a ainsi pour but de développer la démarche low-tech au sein du campus de l’EPFL et dans la région de Lausanne, ainsi que de soutenir des projets incarnant une société techniquement soutenable et souhaitable.
 					</div>
 				</div>
-				<!-- Resource 25: Skil -->
-				<div class="bubble smaller" id="resource25">
+				<!-- Resource 26: Skil -->
+				<div class="bubble smaller" id="resource26">
 					<a href="https://www.epfl.ch/labs/skil/en/about/">
 						<img src="logo\SKIL_logo.png" alt="Skil">
 					</a>
@@ -357,8 +367,8 @@
 				<img src="logo\Services.png" alt="Image">
 				<span>Profite des services</span>
 				<div class="border" id="border5"></div>
-				<!-- Resource 26: Slow ta carrière -->
-				<div class="bubble smaller" id="resource26">
+				<!-- Resource 27: Slow ta carrière -->
+				<div class="bubble smaller" id="resource27">
 					<a href="https://www.le-bon-sens.ch/slowtacarriere">
 						<img src="logo\slow_ta_carriere.png" alt="Slow ta carrière">
 					</a>
@@ -367,8 +377,8 @@
 						Les ateliers d’orientation professionnelle « SLOW TA CARRIERE » offrent un espace réflexif et d’élaboration d’éco-projets aux personnes désireuses de « verdir » leur vie professionnelle, en proposant une démarche où les limites écologiques et la responsabilité sociale sont considérées comme des critères de choix d’orientation, au même titre que les intérêts professionnels ou la personnalité des participant.e.s .
 					</div>
 				</div>
-				<!-- Resource 27: association débouchés durables -->
-				<div class="bubble smaller" id="resource27">
+				<!-- Resource 28: association débouchés durables -->
+				<div class="bubble smaller" id="resource28">
 					<a href="https://unipoly.ch/debouches-durables/">
 						<img src="logo\débouchés durables.png" alt="association débouchés durables">
 					</a>
@@ -377,8 +387,8 @@
 						Débouchés Durables est un pôle d’Unipoly qui cherche à rendre visible les questions concernant la durabilité dans les futures expériences (professionnelles, associatives…) des étudiant.e.s. Cela passe par la proposition d’articles sur la notion de « débouchés durables », des conférences/événements afin de nourrir la réflexion, une base de données d’entreprises sélectionnées conformément à une charte de valeurs, une permanence à l’écoute des questionnements des étudiant.e.s…
 					</div>
 				</div>
-				<!-- Resource 28: Thrift store UPFashionLab -->
-				<div class="bubble smaller" id="resource28">
+				<!-- Resource 29: Thrift store UPFashionLab -->
+				<div class="bubble smaller" id="resource29">
 					<a href="https://www.facebook.com/upfashionlab/">
 						<img src="logo\UPFL_logo.png" alt="Thrift store UPFashionLab">
 					</a>
@@ -387,8 +397,8 @@
 						UpFashionLab est la première association étudiante à Lausanne dévouée à la sensibilisation autour de l’industrie de la mode. Le but est de promouvoir une mode de partage, de récupération et de durabilité sur campus.
 					</div>
 				</div>
-				<!-- Resource 29: Bibliothèque d’objets -->
-				<div class="bubble smaller" id="resource29">
+				<!-- Resource 30: Bibliothèque d’objets -->
+				<div class="bubble smaller" id="resource30">
 					<a href="https://www.unil.ch/durable/fr/home/menuinst/campus-durable/projets-estudiantins/biblotheque-dobjets.html">
 						<img src="logo\biblio-d-objets.png" alt="Bibliothèque d’objets">
 					</a>
@@ -397,8 +407,8 @@
 						Certains de vos objets prennent de la place ? Vous ne les utilisez plus ? Ils sont en bon état ? Vous souhaitez gagner un peu d'espace ? La bibliothèque est là ! Vos objets auront l'opportunité d'être utilisés et feront la joie d'étudiant·e·s. Il est aussi possible de prêter les objets pendant un certain temps et les reprendre par la suite. Le mercredi soir dès 17h, la Maison de la Durabilité est ouverte pour le prêt et la réception des objets.
 					</div>
 				</div>
-				<!-- Resource 30: Meubléco -->
-				<div class="bubble smaller" id="resource30">
+				<!-- Resource 31: Meubléco -->
+				<div class="bubble smaller" id="resource31">
 					<a href="https://meubleco.unipoly.ch/">
 						<img src="logo\meubleco.png" alt="Meubléco">
 					</a>
@@ -407,8 +417,8 @@
 						Meubléco est un projet mené par l'association Unipoly, visant à promouvoir des pratiques respectueuses de l'environnement et le développement durable sur le campus de l'Unil-EPFL. Il a débuté à l'automne 2020 avec un objectif simple : encourager la réutilisation des meubles. Meubléco permet aux étudiants d'acheter et de vendre des meubles d'occasion à des prix abordables, rendant ainsi les choix durables accessibles à la communauté de l'Unil-EPFL.
 					</div>
 				</div>
-				<!-- Resource 31: Fix n’Replace -->
-				<div class="bubble smaller" id="resource31">
+				<!-- Resource 32: Fix n’Replace -->
+				<div class="bubble smaller" id="resource32">
 					<a href="https://unipoly.ch/fix_n_replace-english/">
 						<img src="logo\fix n replace logo.png" alt="Fix n’Replace">
 					</a>
@@ -417,8 +427,8 @@
 						Fix N’Replace organise une série d'événements "Repair Café" sur les campus de l'UNIL/EPFL. L'objectif de l'organisation est de lutter contre le gaspillage en prolongeant la durée de vie de divers objets. Ils visent à promouvoir la réutilisation en offrant un accès facile à des services de réparation et en enseignant les fondements de la réparation 🐣.
 					</div>
 				</div>
-				<!-- Resource 32: Point vélo -->
-				<div class="bubble smaller" id="resource32">
+				<!-- Resource 33: Point vélo -->
+				<div class="bubble smaller" id="resource33">
 					<a href="https://www.epfl.ch/campus/mobility/mobility-and-travel/commuting/point-velo/">
 						<img src="logo\point velo title.png" alt="Point vélo">
 					</a>
@@ -427,8 +437,8 @@
 						Point Vélo est un lieu où les membres de la communauté de l'EPFL peuvent acheter des vélos neufs et d'occasion ainsi que des équipements cyclistes à des prix réduits, bénéficier de réparations de vélo abordables et participer à des cours de mécanique vélo gratuits. Ces produits et services sont disponibles uniquement pour les membres de la communauté de l'EPFL sur présentation de la carte CAMIPRO.
 					</div>
 				</div>
-				<!-- Resource 33: Point Smart -->
-				<div class="bubble smaller" id="resource33">
+				<!-- Resource 34: Point Smart -->
+				<div class="bubble smaller" id="resource34">
 					<a href="https://www.epfl.ch/about/sustainability/sustainable-it/point-smart/">
 						<img src="logo\point smart title.png" alt="Point Smart">
 					</a>
@@ -443,8 +453,8 @@
 				<img src="logo\Community.png" alt="Image">
 				<span>Engage toi</span>
 				<div class="border" id="border6"></div>
-				<!-- Resource 34: Unipoly -->
-				<div class="bubble smaller" id="resource34">
+				<!-- Resource 35: Unipoly -->
+				<div class="bubble smaller" id="resource35">
 					<a href="https://unipoly.ch/">
 						<img src="logo\Unipoly_logo.png" alt="Unipoly">
 					</a>
@@ -453,8 +463,8 @@
 						Unipoly vise à mobiliser et amorcer la discussion sur des sujets sociétaux liés à l’écologie parmi les étudiant·e·x·s de l’UNIL et de l’EPFL. Pour ce faire, l'association est engagée auprès des différentes instances de ces écoles et elle organise des projections de films, des conférences, des débats et bien d’autres projets, à travers ses différents pôles..
 					</div>
 				</div>
-				<!-- Resource 35: Polyquity -->
-				<div class="bubble smaller" id="resource35">
+				<!-- Resource 36: Polyquity -->
+				<div class="bubble smaller" id="resource36">
 					<a href="https://polyquity.ch/">
 						<img src="logo\polyquity_new.png" alt="Polyquity">
 					</a>
@@ -463,8 +473,8 @@
 						Polyquity est une commission de l’AGEPoly, l’association des étudiant·x·e·s de l’EPFL. Ses objectifs principaux sont d’offrir des discussions ouvertes sur les questions de discrimination, ainsi que de sensibiliser le campus sur toutes les discriminations déjà existantes et aux moyens de les combattre. Elle organise pour cela des cafés-discussions, des ateliers, et est à l’origine du compte instagram payetonepfl, qui dénonce et rend visible les situations discriminatoires vécues sur le campus de l’EPFL, ainsi que de nombreux autres projets pour rendre le quotidien à l’EPFL durable et viable pour tou·x·te·s. 
 					</div>
 				</div>
-				<!-- Resource 36: Queermanence -->
-				<div class="bubble smaller" id="resource36">
+				<!-- Resource 37: Queermanence -->
+				<div class="bubble smaller" id="resource37">
 					<a href="https://www.instagram.com/p/CkHJo0yj14L/">
 						<img src="logo\logo queermanence.png" alt="Queermanence">
 					</a>
@@ -473,8 +483,8 @@
 						Queermanence se veut un espace d'écoute bienveillant et confidentiel. Ce lieu existe pour apporter un premier soutien chaleureux mais aussi pour aider à trouver un personnel (sanitaire, social ou juridique) formé et adapté à vos besoins, afin de vous soutenir dans les moments difficiles tels que : La violence physique ou verbale, le harcèlement, la discrimination de genre mais aussi de vous accompagner dans vos questionnements sur le genre, la sexualité et l'intimité.
 					</div>
 				</div>
-				<!-- Resource 37: Zero Emission Group -->
-				<div class="bubble smaller" id="resource37">
+				<!-- Resource 38: Zero Emission Group -->
+				<div class="bubble smaller" id="resource38">
 					<a href="https://zeroemission.group/">
 						<img src="logo\zero_emission_group.png" alt="Zero Emission Group">
 					</a>
@@ -483,8 +493,8 @@
 						Le groupe Zéro Émission est une initiative étudiante visant à sensibiliser et à collaborer avec les acteurs de l'EPFL sur et au-delà du campus afin de catalyser des actions durables. 🌍
 					</div>
 				</div>
-				<!-- Resource 38: Ingénieur·e·s du monde -->
-				<div class="bubble smaller" id="resource38">
+				<!-- Resource 39: Ingénieur·e·s du monde -->
+				<div class="bubble smaller" id="resource39">
 					<a href="https://www.epfl.ch/campus/associations/list/idm/">
 						<img src="logo\Ingénieur_e_s_du_monde 2.png" alt="Ingénieur·e·s du monde">
 					</a>
@@ -493,8 +503,8 @@
 						Ingénieur·e·s du Monde est une association d’étudiant·e·s de l’EPFL-UNIL. Son objectif est de sensibiliser les étudiant·e·s à être des ingénieur·e·s responsables pour un monde équitable et durable. Cela passe par renseigner les étudiant·e·s sur les inégalités dans le monde, les problèmes environnementaux et éthiques qui existent, et essayer parfois d’apporter des idées de solutions en collaborant avec des partenaires à travers le monde. L'association propose aussi des stages en durabilité sociale pour les étudiant·e·s EPFL-UNIL.
 					</div>
 				</div>
-				<!-- Resource 39: Ingénieur·e·s Engagé.es -->
-				<div class="bubble smaller" id="resource39">
+				<!-- Resource 40: Ingénieur·e·s Engagé.es -->
+				<div class="bubble smaller" id="resource40">
 					<a href="https://ingenieurs-engages.org/">
 						<img src="logo\ie_lausanne.png" alt="Ingénieur·e·s Engagé.es">
 					</a>
@@ -503,8 +513,8 @@
 						Le mouvement Ingénieur·e·s Engagés (IE) a pour but de rassembler toutes les personnes se questionnant sur le rôle et la place des ingénieur·e·s dans la société. Il réunit principalement des étudiants et ingénieur·es voulant donner du sens à leur (futur) métier, conscients des problématiques sociales et environnementales auxquelles notre société doit aujourd’hui faire face.
 					</div>
 				</div>
-				<!-- Resource 40: La Convergence -->
-				<div class="bubble smaller" id="resource40">
+				<!-- Resource 41: La Convergence -->
+				<div class="bubble smaller" id="resource41">
 					<a href="https://laconvergence.ch/">
 						<img src="logo\la convergence.png" alt="La Convergence">
 					</a>
@@ -513,8 +523,8 @@
 						Derrière l’égide de La Convergence sont réunies conjointement les associations : Ingénieur·e·s du Monde, Poliquity, Zero Emission Group, Unipoly, et Planqueer . Leur regroupement leur donne force d’action et capacité à organiser des actions d’envergure plus ambitieuse grâce à la combinaison de leurs expériences, de leurs spécialisations et du regroupement de leurs membres.
 					</div>
 				</div>
-				<!-- Resource 41: Amnesty des Hautes Ecoles Lausannoises -->
-				<div class="bubble smaller" id="resource41">
+				<!-- Resource 42: Amnesty des Hautes Ecoles Lausannoises -->
+				<div class="bubble smaller" id="resource42">
 					<a href="https://www.unil.ch/associations/causes-sociales">
 						<img src="logo\amnesty_logo.png" alt="Amnesty des Hautes Ecoles Lausannoises">
 					</a>
@@ -523,8 +533,8 @@
 						L'association Amnesty HEL est dédiée à la promotion de la défense des droits de l'homme sur les campus de Lausanne en sensibilisant les étudiants aux questions socio-politiques et environnementales. Ses activités et actions sont organisées en cinq sections : Droits des femmes, Environnement, Actualités politiques internationales, LGBTQ+ et Asile et Migration. Au sein de ces sections, une grande variété d'événements et d'actions ont lieu, notamment des conférences, des projections de films, des ateliers et des initiatives concrètes. Ces actions concrètes comprennent la lutte contre la précarité menstruelle sur le campus, l'organisation de rassemblements pour la durabilité, la création d'un podcast et la réalisation de collectes de déchets. Toutes ces activités sont menées de manière bienveillante et inclusive.
 					</div>
 				</div>
-				<!-- Resource 42: Apiculture -->
-				<div class="bubble smaller" id="resource42">
+				<!-- Resource 43: Apiculture -->
+				<div class="bubble smaller" id="resource43">
 					<a href="https://unipoly.ch/apiculture-english/">
 						<img src="logo\apiculture.png" alt="Apiculture">
 					</a>
@@ -533,8 +543,8 @@
 						Le but du projet Apiculture est de sensibiliser les étudiants et le personnel du campus à la problématique du syndrome d’effondrement des colonies d’abeilles et de se familiariser avec l’apiculture. Pour ce faire, le projet possède son propre rucher composé d’environ 5 ruches situé sur le domaine de la ferme de Bassenges depuis début 2017 nous permettant ainsi de s’initier à l’apiculture et de produire du miel lorsque les abeilles l’ont décidé.
 					</div>
 				</div>
-				<!-- Resource 43: Jardins - Campus farmers -->
-				<div class="bubble smaller" id="resource43">
+				<!-- Resource 44: Jardins - Campus farmers -->
+				<div class="bubble smaller" id="resource44">
 					<a href="https://unipoly.ch/jardins-campus-farmers/">
 						<img src="logo\jardin_campus_farmers2.png" alt="Jardins - Campus farmers">
 					</a>
@@ -543,8 +553,8 @@
 						Ce projet a pour but de permettre aux étudiants de cultiver des légumes sur leur campus de manière biologique. Bien entendu il s’agit d’un terrain d’apprentissage du jardinage, mais c’est aussi un endroit où l’on (re)découvre une relation avec la terre et la nature ainsi qu’un lieu d’échange avec d’autres étudiants.
 					</div>
 				</div>
-				<!-- Resource 44: Association des étudiant·es végan·es et animalistes -->
-				<div class="bubble smaller" id="resource44">
+				<!-- Resource 45: Association des étudiant·es végan·es et animalistes -->
+				<div class="bubble smaller" id="resource45">
 					<a href="https://unipoly.ch/eva/">
 						<img src="logo\EVA.png" alt="Association des étudiant·es végan·es et animalistes">
 					</a>
@@ -553,8 +563,8 @@
 						EVA est le pôle d'Unipoly représentant les étudiants véganes et animalistes. Il encourage un mode de vie éthique et respectueux des animaux, et offre la possibilité de se nourrir et de vivre aussi indépendamment que possible de l'exploitation animale en augmentant de manière significative l'offre végétalienne dans les lieux de restauration des campus universitaires. L’EVA souhaite également rassembler les étudiant·e·s véganes et personnes intéressées par le véganisme et l’animalisme au sein d’une communauté tournée vers la discussion ainsi qu’offrir support et conseils aux étudiant·e·s et collaborateur·rice·s souhaitant adopter un mode de vie végane.
 					</div>
 				</div>
-				<!-- Resource 45: Drag Lab -->
-				<div class="bubble smaller" id="resource45">
+				<!-- Resource 46: Drag Lab -->
+				<div class="bubble smaller" id="resource46">
 					<a href="https://www.epfl.ch/campus/associations/list/asar/drag-lab/">
 						<img src="logo\drag_lab.png" alt="Drag Lab">
 					</a>
@@ -563,8 +573,8 @@
 						Des étudiant, enseignant ou personnes travaillant à l'EPFL promouvant la parité et la diversité au sein de l'école d'architecture à travers des lectures et des débats.
 					</div>
 				</div>
-				<!-- Resource 46: PlanQueer -->
-				<div class="bubble smaller" id="resource46">
+				<!-- Resource 47: PlanQueer -->
+				<div class="bubble smaller" id="resource47">
 					<a href="https://www.epfl.ch/campus/associations/list/planqueer/">
 						<img src="logo\planqueer.png" alt="PlanQueer">
 					</a>
