epfl course logo change

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				<!-- Resource 6: EPFL Courses -->
 				<div class="bubble smaller" id="resource6">
 					<a href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
-						<img src="logo\epfl.png" alt="EPFL Courses">
+						<img src="logo\epfl_course.png" alt="EPFL Courses">
 					</a>
 					<div class="text-description">
 						<h3>EPFL Courses</h3>
